# Danake

./: CMakeLists.txt  FaceAPP.txt  Makefile  README.md  aritmetica.h  cleanall.bat  index.c  index.h  index.html  main.c
arq/: CMakeLists.txt  Makefile  aritmetica.c  cmake_install.cmake
database/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  db.c  db.h
lib/: CMakeLists.txt  Makefile  aritmetica.c  aritmetica.h  cmake_install.cmake
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
scripts/: resources.pl
src/: CMakeLists.txt  Cmakelist.txt  Makefile  cmake_install.cmake  main.c  resources.c  resources.h  routes.c  routes.h
web/: 404.html  index.html
web/css/: app.css
web/start/css/: agency.css
